--- a/KalamazoDefteri/Views/Auth/Register.cshtml
+++ b/KalamazoDefteri/Views/Auth/Register.cshtml
@@ -55,6 +55,11 @@
                             @Html.EditorFor(x => x.password)
                             <i class="ti-lock"></i>
                         </div>
+                        <div class="form-gp exampleInputPassword1">
+                            @Html.LabelFor(x => x.passwordconfirm)
+                            @Html.EditorFor(x => x.passwordconfirm)
+                            <i class="ti-lock"></i>
+                        </div>
                         <div class="submit-btn-area">
                             <button id="form_submit" type="submit">KAYDOL <i class="ti-arrow-right"></i></button>
                         </div>
