--- a/KalamazoDefteri/Views/Firmalar/CompanyView.cshtml
+++ b/KalamazoDefteri/Views/Firmalar/CompanyView.cshtml
@@ -9,23 +9,24 @@
             <h4 class="header-title">FİRMA GÖRÜNTÜLE</h4>
             @using (Html.BeginForm())
             {
+                @Html.ValidationSummary()
             <div class="form-group">
                 <label for="example-text-input" class="col-form-label">Firma Adı:</label>
                 @Html.TextBoxFor(u => u.ourCompany.Companyname, new { @class = "form-control" })
             </div>
             <div class="form-group">
                 <label for="example-search-input" class="col-form-label">Telefon Numarası:</label>
-                @Html.TextBoxFor(u => u.ourCompany.Phonenumber, new { @class = "form-control" })
+                @Html.TextBoxFor(u => u.ourCompany.Phonenumber, new { @class = "form-control" ,@id = "phoneNumber"})
 
             </div>
             <div class="form-group">
                 <label for="example-email-input" class="col-form-label">Fax Numarası :</label>
-                @Html.TextBoxFor(u => u.ourCompany.Faxnumber, new { @class = "form-control" })
+                @Html.TextBoxFor(u => u.ourCompany.Faxnumber, new { @class = "form-control", @id = "faxNumber"})
 
             </div>
                 <div class="form-group">
                     <label for="example-email-input" class="col-form-label">IBAN : </label>
-                @Html.TextBoxFor(u => u.ourCompany.Iban, new { @class = "form-control" })
+                @Html.TextBoxFor(u => u.ourCompany.Iban, new { @class = "form-control" , @id = "IBAN"})
                 </div>
                 <div class="form-group">
                     <label for="example-email-input" class="col-form-label">Vergi Dairesi : </label>
@@ -36,10 +37,19 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">₺</span>
                     </div>
-                    <input type="text" style="height:40px;" value="@Model.ourCompany.Balance" disabled class="form-control" aria-label="Amount (to the nearest dollar)">
+                    @*<input type="text" style="height:40px;" value="@Model.ourCompany.Balance" disabled class="form-control" aria-label="Amount (to the nearest dollar)">*@
+                    @Html.TextBoxFor(u => u.ourCompany.Balance, new { style = "height:40px !important;", disabled = "disabled", @class = "form-control" })
                     <div class="input-group-append">
                         <span class="input-group-text">.00</span>
                     </div>
+                    @* Buradan balance'ın değiştirilmesini istemiyoruz
+                        girdi/çıktı olarak eklenmesini istiyoruz bu nedenle
+                        balance değiştirilemez olmalı, ancak disabled = "disabled"
+                        özelliğini textboxfor'a eklediğimizde form'dan data olarak controller'ın
+                        post fonksiyonuna gönderilmiyor, ben de bir tane de disabled olmayan ve görülmeyen
+                        bir textbox yaratarak bir çözüm buldum.*@
+                    @Html.TextBoxFor(u => u.ourCompany.Balance, new { style = "height:40px !important; visibility: hidden; ", @class = "form-control" })
+
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
