--- a/KalamazoDefteri/Views/Firmalar/Index.cshtml
+++ b/KalamazoDefteri/Views/Firmalar/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model KalamazoDefteri.ViewModels.CompaniesIndex
-    @{
-        ViewBag.Title = "Firma Görüntüle";
-    }
+@{
+    ViewBag.Title = "Firma Görüntüle";
+}
 
-    @*/*
+@*/*
     Create.Table("companies")
     .WithColumn("companyID").AsInt32().Identity().PrimaryKey()
     .WithColumn("companyName").AsString(128)
@@ -16,47 +16,88 @@
     */*@
 
 
-        <div class="col-12 mt-5">
-            <div class="card">
-                <div class="card-body">
-                    <table class="table text-center">
-                        <thead class="text-uppercase bg-primary">
-                            <tr class="text-white">
-                                <th scope="col">ID</th>
-                                <th scope="col">Firma Adı</th>
-                                <th scope="col">Telefon No.</th>
-                                <th scope="col">Mevcut Bakiye</th>
-                                <th scope="col">İşlemler</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var company in Model.ourCompanies)
-                            {
-                                <tr>
-                                    <th scope="row">@company.Companyid</th>
-                                    <td>@company.Companyname</td>
-                                    <td>@company.Phonenumber</td>
-                                    <td>@company.Balance</td>
-                                    <td class="pull-left" style="height:26px;">
-                                        @Html.RouteLink("GÖRÜNTÜLE ve DÜZENLE", "CompanyView", new {id = company.Companyid}, new { @class = "btn btn-flat btn-success", style = "margin-right:0; height:26px; padding-top:4px;"})
-                                        <a href="#" class="btn btn-flat btn-danger" style="margin-right:0; height:26px; padding-top:4px;"><i class="ti-settings"></i> PAROLA SIFIRLA</a>
-                                        <a href="#" data-post=" Kullanıcısını Silmek İstediğinize Emin Misiniz?" class="btn btn-flat btn-warning" style="margin-right:0; height:26px; padding-top:4px;"><i class="ti-trash"></i> SİL</a>
 
-
-                                    </td>
-                                </tr>
-                            }
+<div class="col-12 mt-5">
+    <div class="card">
+        <div class="card-body">
+            <table class="table text-center">
+                <thead class="text-uppercase bg-primary">
+                    <tr class="text-white">
+                        <th scope="col">ID</th>
+                        <th scope="col">Firma Adı</th>
+                        <th scope="col">Telefon No.</th>
+                        <th scope="col">Mevcut Bakiye</th>
+                        <th scope="col">İşlemler</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var company in Model.ourCompanies)
+                    {
+                        if (company.belongsToUser == Database.Session.Query<KalamazoDefteri.Models.User>().Where(user => user.Username == Html.ViewContext.HttpContext.User.Identity.Name).ToList()[0]
+)
+                        {
                             <tr>
-                                <th scope="row"></th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>
-                                    <button class="btn btn-flat btn-primary pull-right" style="margin-right:0;"><i class="ti-plus" style="color:yellow;">  </i> YENI KULLANICI OLUSTUR</button>
+                                <th style="height:26px !important; text-align:center; vertical-align:middle; width: 10%;" scope="row">@company.Companyid</th>
+                                <td style="height:26px !important; text-align:center; vertical-align:middle; width: 30%;">@company.Companyname</td>
+                                <td style="height:26px !important; text-align:center; vertical-align:middle; width: 20%;">@company.Phonenumber</td>
+                                <td style="height:26px !important; text-align:center; vertical-align:middle; width: 10%;">@company.Balance</td>
+                                <td class="dt-center" style="height:26px !important; text-align:center; vertical-align:middle; width:30%">
+                                    @*@Html.RouteLink("GÖRÜNTÜLE ve DÜZENLE", "CompanyView", new { id = company.Companyid }, new { @class = "btn btn-flat btn-success", style = "margin-right:0; height:26px; padding-top:4px;" })*@
+                                    <a href="@Url.Action("CompanyView",new { id = company.Companyid})"
+                                       class="btn btn-flat btn-success"
+                                       style="height:26px; padding-top:4px;">
+                                        <i class="ti-eye">  GÖRÜNTÜLE ve DÜZENLE</i>
+                                    </a>
+                                    <a href="@Url.Action("DeleteCompany",new { id = company.Companyid})"
+                                       class="btn btn-flat btn-danger"
+                                       data-post="@company.Companyname İsimli Şirketi Silmek İstediğinize Emin Misiniz?"
+                                       style="height:26px; padding-top:4px;">
+                                        <i class="ti-trash">  SİL</i>
+                                    </a>
                                 </td>
                             </tr>
-                        </tbody>
-                    </table>
-                </div>
+                        }
+                    }
+                    <tr>
+                        <th scope="row"></th>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>
+                            <button onclick="location.href='@Url.Action("NewCompany", new {
+                                          id = Database.Session.Query<KalamazoDefteri.Models.User>()
+                                          .Where(u => u.Username == HttpContext.Current.User.Identity.Name)
+                                          .Select(u => u.Id).ToList()[0]
+                                      })'" class="btn btn-flat btn-primary pull-right "
+                                    style="margin-right:0;">
+                                <i class="ti-plus" style="color:yellow;">  </i>
+                                Yeni Firma Ekle
+                            </button>
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="pagination justify-content-center">
+                @if (Model.ourCompanies.HasPreviousPage)
+                {
+                    <a href="@Url.Action("index",new { page=Model.ourCompanies.PreviousPage})" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-chevron-left"></i>Önceki Sayfa</a>
+                }
+                else
+                {
+                    <a href="#" class="btn btn-default disabled btn-sm"><i class="glyphicon glyphicon-chevron-left "></i>Önceki Sayfa</a>
+                }
+
+                @if (Model.ourCompanies.HasNextPage)
+                {
+                    <a href="@Url.Action("index",new { page=Model.ourCompanies.NextPage})" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-chevron-right"></i>Sonraki Sayfa</a>
+                }
+                else
+                {
+                    <a href="#" class="btn btn-default disabled btn-sm"><i class="glyphicon glyphicon-chevron-right "></i>Sonraki Sayfa</a>
+                }
+
             </div>
         </div>
+    </div>
+</div>
