--- a/KalamazoDefteri/Views/Monetary/NewIncome.cshtml
+++ b/KalamazoDefteri/Views/Monetary/NewIncome.cshtml
@@ -12,13 +12,12 @@
                 @Html.ValidationSummary()
                 <div class="form-group">
                     <label for="example-text-input" class="col-form-label">Firma Adı:</label>
-                    @*@Html.TextBoxFor(u => u.Companies, new { @class = "form-control" })*@
-                    @Html.DropDownListFor(u => u.selectedSirketID, new SelectList(Model.sirketler.Items, "Companyid", "Companyname", 1),"Fir Firma Seçiniz.",new { @class = "custom-select", placeholder = "Bir Firma Seçin."})
+                    @Html.DropDownListFor(u => u.selectedSirketID, new SelectList(Model.sirketler.Items, "Companyid", "Companyname", 1), "Bir firma seçiniz.", new { @class = "custom-select", placeholder = "Bir Firma Seçin." })
 
                 </div>
                 <div class="form-group" style="width: 15%;">
                     <label for="example-search-input" class="col-form-label">Tarih:</label>
-                    @Html.TextBoxFor(u => u.Date, new { @class = "form-control", type = "date"})
+                    @Html.TextBoxFor(u => u.Date, new { @class = "form-control", type = "date", @id = "tarihSecimi" })
                 </div>
                 <label for="example-email-input" class="col-form-label">Miktar: </label>
                 <div class="input-group mb-3" style="width:400px; ">
@@ -44,3 +43,4 @@
         </div>
     </div>
 </div>
+
