--- a/KalamazoDefteri/Views/Monetary/OutgoingIndex.cshtml
+++ b/KalamazoDefteri/Views/Monetary/OutgoingIndex.cshtml
@@ -1,7 +1,62 @@
-﻿
+﻿@model KalamazoDefteri.ViewModels.Outgoing
 @{
     ViewBag.Title = "OutgoingIndex";
 }
 
-<h2>OutgoingIndex</h2>
-
+<div class="col-12 mt-5">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="header-title">Striped Rows</h4>
+            <div class="single-table">
+                <div class="table-responsive">
+                    <table class="table table-striped text-center">
+                        <thead class="text-uppercase">
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Firma</th>
+                                <th scope="col">Açıklama</th>
+                                <th scope="col">Tarih</th>
+                                <th scope="col">Girdi</th>
+                                <th scope="col">İşlemler</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var outgoing in Model.allOutgoings)
+                            {
+                                <tr>
+                                    <th style="text-align:center; vertical-align:middle;" scope="row">@outgoing.Outgoingid</th>
+                                    <td style="text-align:center; vertical-align:middle;">@outgoing.Companies.Companyname</td>
+                                    <td style="text-align:center; vertical-align:middle;">@outgoing.Explanation</td>
+                                    <td style="text-align:center; vertical-align:middle;">@outgoing.Date.ToString("dd/MM/yyyy")</td>
+                                    <td style="text-align:center; vertical-align:middle;">@outgoing.Payment</td>
+                                    <td style="text-align:center; vertical-align:middle;">
+                                        <a href="@Url.Action("DeleteOutgoing","Monetary",new { id = outgoing.Outgoingid })"
+                                           class="btn btn-flat btn-danger"
+                                           data-post="Gideri Silmek İstediğinize Emin Misiniz? (Bakiyenizde değişiklik yaratacaktır.)"
+                                           style="height:26px; padding-top:4px;">
+                                            <i class="ti-trash">  SİL</i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                        <tr>
+                            <th scope="row"></th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <button onclick="location.href='@Url.Action("NewOutgoing")'" class="btn btn-flat btn-primary pull-right"
+                                        style="margin-right:0;">
+                                    <i class="ti-plus" style="color:yellow;">  </i>
+                                    Yeni Girdi Ekle
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
